Add log in button

--- a/my-app/my-app/src/react-components/LogInForm/style.css
+++ b/my-app/my-app/src/react-components/LogInForm/style.css
@@ -1,9 +1,9 @@
-.LogInHeader{
+.SignInHeader{
+    text-align: center;
 }
 
 .LogInFormGrid{
     position: relative;
-    
 }
 
 .LogInForm{
@@ -11,4 +11,8 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+}
+
+.LogInButton{
+    top: 20px;
 }
