--- a/my-app/my-app/src/react-components/LogInPageBanner/style.css
+++ b/my-app/my-app/src/react-components/LogInPageBanner/style.css
@@ -2,4 +2,7 @@
     display: block;
     width: 100%;
     height: 250px;
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
 }
