Add proper css class names

--- a/my-app/my-app/src/react-components/InputField/style.css
+++ b/my-app/my-app/src/react-components/InputField/style.css
@@ -1,10 +1,6 @@
-.LogInInputGrid{
+.logInGrid{
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.input{
-    width: 200px;
 }
