Add navigation to CreateAccPage and add the page itself

--- a/my-app/my-app/src/react-components/LogInForm/style.css
+++ b/my-app/my-app/src/react-components/LogInForm/style.css
@@ -15,3 +15,10 @@
     transform: translate(-50%, -50%);
 }
 
+.logInForm_CreateAccLink{
+    position: relative;
+    top: -75px;
+    left: -6px;
+    font-size: small;
+}
+
