--- a/my-app/my-app/src/react-components/LogInForm/style.css
+++ b/my-app/my-app/src/react-components/LogInForm/style.css
@@ -12,7 +12,7 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -45%);
 }
 
 .logInForm_CreateAccLink{
@@ -20,5 +20,12 @@
     top: -75px;
     left: -6px;
     font-size: small;
+}
+
+#logInForm_incorrectCredPrompt{
+    color: red;
+    align-self: center;
+    position: absolute;
+    top: 230px;
 }
 
