--- a/my-app/my-app/src/react-components/ClubBanner/style.css
+++ b/my-app/my-app/src/react-components/ClubBanner/style.css
@@ -1,12 +1,13 @@
 .ClubBannerContainer{
     top: 0;
     left: 0;
-    border-width: 2px
+    border: 5px lightblue solid
 }
 
 .ClubProfileBannerImage{
     width: 100%;
     height: 400px;
+    
 }
 
 .ClubProfileBannerImageContainer {
