--- a/my-app/my-app/src/react-components/ClubProfilePage/style.css
+++ b/my-app/my-app/src/react-components/ClubProfilePage/style.css
@@ -1,5 +1,6 @@
 #profilePage{
-    background-color: skyblue;
-    height: 100vh;
+    background-color: lightblue;
+    height: 100%;
+    width: 100%;
     position: relative;
 }
