Add ability for user to select their own image for their profile

--- a/my-app/my-app/src/react-components/UserProfilePage/style.css
+++ b/my-app/my-app/src/react-components/UserProfilePage/style.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     left: 50px;
-    top: 50px;
+    top: 150px;
 }
 
 #checkboxDiv{
@@ -13,10 +13,17 @@
     width: fit-content;
     height: fit-content;
     left: 500px;
-    top: 160px;
+    top: 175px;
 }
 
 #timelineOptsHeader{
     position: relative;
     top: -25px;
 }
+
+#mainHeader{
+    left: 35px;
+    top: -15px;
+    position: absolute;
+}
+
