--- a/my-app/my-app/src/react-components/UserProfileImage/style.css
+++ b/my-app/my-app/src/react-components/UserProfileImage/style.css
@@ -1,4 +1,10 @@
 #image{
-    width: 500px;
-    height: 500px;
+    transform: scale(1,1);
+    border-radius: 50%;
+    border: solid;
+    border-color: black;
+    border-width: 0.5px;
+    position: absolute;
+    top: 65px;
+    left: 50px;
 }
