Add account creation screen

--- a/my-app/my-app/src/react-components/CreateAccUserInfo/style.css
+++ b/my-app/my-app/src/react-components/CreateAccUserInfo/style.css
@@ -1,10 +1,8 @@
-
-#mainDiv #mainHeader{
+#formDiv{
     position: absolute;
     width: fit-content;
     height: fit-content;
-    top: 10%;
     left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%);
 }
-
