--- a/my-app/my-app/src/react-components/ClubProfilePage/style.css
+++ b/my-app/my-app/src/react-components/ClubProfilePage/style.css
@@ -1,6 +1,4 @@
 #profilePage{
     background-color: lightblue;
-    height: 100vh;
-    width: 100%;
-    position: relative;
+    min-height: 100vh;
 }
