--- a/my-app/my-app/src/react-components/CreateAccPage/style.css
+++ b/my-app/my-app/src/react-components/CreateAccPage/style.css
@@ -1,10 +1,29 @@
+#mainDiv{
+    height: 1000px;
+}
 
 #mainDiv #mainHeader{
-    position: absolute;
+    position: relative;
     width: fit-content;
     height: fit-content;
-    top: 10%;
+    top: 3%;
     left: 50%;
     transform: translate(-50%, -50%);
+    margin-bottom: 20px;
+    display: block;
+}
+
+#mainDiv #banner{
+    display: block;
+}
+
+#mainDiv #infoDiv{
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+    transform: translate(-50%, 0%);
+    left: 50%;
+    display: block;
+    
 }
 
