Integrate banning functionality into log in screen

--- a/my-app/my-app/src/react-components/LogInForm/style.css
+++ b/my-app/my-app/src/react-components/LogInForm/style.css
@@ -40,3 +40,10 @@
     top: 150px;
 }
 
+#logInForm_bannedPrompt{
+    color: red;
+    align-self: center;
+    position: absolute;
+    top: 150px;
+}
+
