--- a/my-app/my-app/src/react-components/ClubBanner/style.css
+++ b/my-app/my-app/src/react-components/ClubBanner/style.css
@@ -1,7 +1,7 @@
 .ClubBannerContainer{
     top: 0;
     left: 0;
-    border: 5px lightblue solid;
+    border: 5px gainsboro solid;
     border-radius: 5px
 }
 
