--- a/my-app/my-app/src/react-components/ClubTimeline/style.css
+++ b/my-app/my-app/src/react-components/ClubTimeline/style.css
@@ -3,7 +3,7 @@
     margin-top: 30px;
     margin-left: 5px;
     margin-right: 5px;
-    border: 1px gray solid;
+    border: 1px black solid;
     background-color: white;
     border-radius: 5px;
     height:100%
