--- a/my-app/my-app/src/react-components/ClubInfo/style.css
+++ b/my-app/my-app/src/react-components/ClubInfo/style.css
@@ -1,5 +1,5 @@
 #ClubInfoContainer{
-    border: 2px solid grey;
+    border: 1px solid black;
     background-color: white;
     margin: 5px;
     border-radius: 5px;
@@ -13,7 +13,7 @@
     max-height: 150px;
     overflow-y: scroll;
     height: fit-content;
-    border-top: 1px solid gray;
+    border-top: 1px solid lightgray;
     padding-top: 10px;
 }
 
