--- a/my-app/my-app/src/react-components/LogInPageBanner/style.css
+++ b/my-app/my-app/src/react-components/LogInPageBanner/style.css
@@ -1,9 +1,9 @@
 .logInPageBanner{
     display: block;
-    width: 100%;
+    width: 100vw;
     height: auto;
     min-height: 100px;
-    max-height: 400px;
+    max-height: 300px;
     border-color: black;
     border-width: 1px;
     border-style: solid;
