--- a/my-app/my-app/src/react-components/UserProfilePage/style.css
+++ b/my-app/my-app/src/react-components/UserProfilePage/style.css
@@ -7,6 +7,8 @@
     border-width: 1px;
     border-style: solid;
     display: block;
+    position: relative;
+    top:90px;
 }
 
 #userProfilePageInfo{
@@ -16,7 +18,7 @@
     display: flex;
     flex-direction: column;
     left: 50px;
-    top: 150px;
+    top: 200px;
 }
 
 #checkboxDiv{
