--- a/my-app/src/react-components/CreateAccPage/style.css
+++ b/my-app/src/react-components/CreateAccPage/style.css
@@ -1,5 +1,6 @@
 #mainDiv{
     height: 1000px;
+    width: fit-content
 }
 
 #mainDiv #mainHeader{
@@ -25,5 +26,15 @@
     left: 50%;
     display: block;
     
+}
+
+#emailErrorSpan{
+    color: red;
+    width: 525px;
+    height: 10px;
+    position: relative;
+    left: 35%;
+    top: 5%;
+    display: block;
 }
 
