Add notification to user when they are trying to create an account with a username or email that already exists. /users/create route has been changed to return status 409 in such cases.

--- a/my-app/src/react-components/CreateAccPage/style.css
+++ b/my-app/src/react-components/CreateAccPage/style.css
@@ -28,13 +28,13 @@
     
 }
 
-#emailErrorSpan{
+.inputErrorSpan{
     color: red;
     width: 525px;
     height: 10px;
     position: relative;
     left: 35%;
-    top: 5%;
+    top: 15%;
     display: block;
 }
 
