--- a/my-app/src/react-components/ClubCreationPage/style.css
+++ b/my-app/src/react-components/ClubCreationPage/style.css
@@ -2,10 +2,34 @@
     width: fit-content;
     height: fit-content;
     position: relative;
-    margin-top: 250px;
     margin-left: 45%;
+    margin-top: 20px;
+}
+
+#titleText {
+    color: black;
+    margin-top: 8%;
+    margin-left: 42%;
+    font-size: 35pt;
+    font-weight: bold;
 }
 
 .dupNameErrorSpan {
     color:red;
+    margin-left: 45%;
+    top: 10%;
+    position: relative;
+    display: block;
+}
+
+.clubCreatedSpan {
+    color:green;
+    margin-left: 45%;
+    top: 10%;
+    position: relative;
+    display: block;
+}
+
+#messageDiv {
+    margin-top: 45px;
 }
