Updated styling and buttons on club profile page

--- a/my-app/src/react-components/ClubInfo/style.css
+++ b/my-app/src/react-components/ClubInfo/style.css
@@ -5,6 +5,11 @@
     border-radius: 5px;
 }
 
+.spacingSpan {
+    margin-left: 3px;
+    margin-right: 3px;
+}
+
 #ClubInfoText {
     margin-top: 10px;
     padding-left: 10px;
