restyling the login page

--- a/my-app/src/react-components/InputField/style.css
+++ b/my-app/src/react-components/InputField/style.css
@@ -1,6 +1,9 @@
 .logInGrid{
     height: 100%;
-    display: flex;
+    display: inline;
     justify-content: center;
     align-items: center;
+}
+.logInInput{
+	background-color: black;
 }
