--- a/my-app/src/react-components/PasswordInputField/style.css
+++ b/my-app/src/react-components/PasswordInputField/style.css
@@ -2,7 +2,7 @@
     align-self: center;
 }
 .passField_showHidePassButton{
-    position: relative;
-    top: -45px;
-    left: 185px;
+	position: relative;
+    left: 11vw;
+    top: -7.4vh;
 }
