--- a/my-app/src/react-components/InputField/style.css
+++ b/my-app/src/react-components/InputField/style.css
@@ -4,6 +4,6 @@
     justify-content: center;
     align-items: center;
 }
-.logInInput{
-	background-color: black;
+.logInInput .MuiInputBase-input{
+	color: white;
 }
