--- a/client/src/react-components/FeedPage/style.css
+++ b/client/src/react-components/FeedPage/style.css
@@ -2,3 +2,18 @@ firstFeed {
     position: relative;
     top: 80px;
 }
+
+.feedsContainer{
+    width: fit-content;
+    height: fit-content;
+    min-height: 400px;
+}
+
+.msgSpan{
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+}
