--- a/client/src/react-components/FeedCard/style.css
+++ b/client/src/react-components/FeedCard/style.css
@@ -8,7 +8,12 @@
 	margin-left: 10px;
 	margin-right: 10px;
 	margin-bottom: 10px;
-	background-color: grey;
+	background-color: #C3C3C3;
+	border-radius: 25px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	position: relative;
 }
 
 #clubProfileImgContainer{
