--- a/client/src/react-components/FeedCard/style.css
+++ b/client/src/react-components/FeedCard/style.css
@@ -44,9 +44,14 @@
 	width: 500px;
 	min-height: 60px;
 	border-radius: 10px;
+	padding-left: 10px;
+	position: relative;
+	left: 5px;
+	padding-top: 3px;
 }
 
 #headerContainer{
 	display: inline-block;
+	padding-left: 10px;
 }
 
