Try another fix

--- a/client/src/react-components/FeedPage/style.css
+++ b/client/src/react-components/FeedPage/style.css
@@ -51,5 +51,9 @@
     width: fit-content;
     height: fit-content;
     max-width: 90%;
-    
+    margin-right: 0px;
+    margin-top: 0px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+    min-width: 800px;
 }
