--- a/client/src/react-components/LogInPageBanner/style.css
+++ b/client/src/react-components/LogInPageBanner/style.css
@@ -3,7 +3,7 @@
     width: 100vw;
     height: auto;
     min-height: 100px;
-    max-height: 300px;
+    max-height: 50vh;
     border-color: black;
     border-width: 1px;
     border-style: solid;
