--- a/client/src/react-components/Navbar/style.css
+++ b/client/src/react-components/Navbar/style.css
@@ -13,15 +13,14 @@ NavBarRB.Link{
 
 }
 
-navbar {
-	style={{display:'block'}}
+.navbarStyle{
+	height: 10vh;
 }
-
 
 .navbar{
 	/* dimension, position, font, background color, border */
 	width: 100vw;
-	/*height: 12vh;*/
+	height: 10vh;
 	position: fixed;
 	top: 0;
 	background-color: rgb(102, 102, 153);
@@ -31,15 +30,15 @@ navbar {
 .navLogo .navLogoPic{
 	/* dimemsion, shape, position, frame*/
 	margin-left: 5vw;
-	width: 10vh;
-	/*padding: none;*/
+	height: 8vh;
 
 }
 
 .navLogoPic, .navProfilePic{
 	/* border */
 	border-radius: 50%;
-	width: 10vh;
+	width: 8vh;
+	height: 8vh;
 }
 
 .navLink{
