--- a/client/src/react-components/UserProfilePage/style.css
+++ b/client/src/react-components/UserProfilePage/style.css
@@ -8,7 +8,7 @@
     border-style: solid;
     display: block;
     position: relative;
-    top:90px;
+    margin-top: 10vh;
 }
 
 #userProfilePageInfo{
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     left: 50px;
-    top: 200px;
+    top: 5vh;
 }
 
 #checkboxDiv{
